# 2PlayerController

./: .gitignore  CMakeLists.txt  README.md
Arduino_sam/Arduino/etc/: extratargets-avr.cmake  toolchain-avr.cmake
CSPI/src/: cspi.c
IR_Reciever/: CMakeLists.txt
IR_Reciever/src/: IRReceiveCodes.h  IRprotocol.cpp  Test.cpp  ircodes.h  main.cpp  nunchuk.cpp
IR_Reciever_old/src/: main.cpp  nunchuk.cpp
IRsender/: CMakeLists.txt
IRsender/src/: IRsender.cpp  sender.cpp
IRsender_old/src/: IRsender.cpp
IRsender_old2/: CMakeLists.txt
LCD/: CMakeLists.txt
LCD/Test_files/circles/: CMakeLists.txt
LCD/lib_install/BusIO/: CMakeLists.txt
LCD/lib_install/GFX/: CMakeLists.txt
LCD/lib_install/ILI9341/: CMakeLists.txt
LCD/lib_install/SPIlib/src/bootloaders/atmega/: ATmegaBOOT_168_lilypad_resonator.hex  ATmegaBOOT_168_ng.hex
LCD/lib_install/SPIlib/src/bootloaders/optiboot/: optiboot_atmega328.hex  optiboot_atmega8.hex
LCD/lib_install/Wirelib/src/bootloaders/atmega/: ATmegaBOOT_168_diecimila.hex
LCD/src/: main.cpp
MIC_Project/MIC/Alfabet/: CMakeLists.txt
MIC_Project/MIC/Alfabet/src/: main.cpp
MIC_Project/MIC/ArduinoCoreLib/: CMakeLists.txt
MIC_Project/MIC/Blink/: CMakeLists.txt
MIC_Project/MIC/Blink/src/: main.cpp
MIC_Project/MIC/CSPI/: CMakeLists.txt  README.md
MIC_Project/MIC/CSPI/examples/SPI-master/src/: master.c
MIC_Project/MIC/CSPI/examples/SPI-slave/src/: slave.c
MIC_Project/MIC/CSPI/src/: cspi.h
MIC_Project/MIC/Project1/: CMakeLists.txt
MIC_Project/MIC/Project1/src/: main.cpp  test.cpp
MIC_Project/MIC/Rot13/: CMakeLists.txt
MIC_Project/MIC/Rot13/src/: main.cpp
MIC_Project/MIC/Test_Folder/: CMakeLists.txt
MIC_Project/MIC/Wirelib/: CMakeLists.txt
MIC_Project/MIC/bitmalupi/: CMakeLists.txt
MIC_Project/MIC/bitmalupi/src/: main.cpp
MIC_Project/MIC/bitmalupi2/: CMakeLists.txt
MIC_Project/MIC/bitmalupi2/src/: main.cpp
MIC_Project/MIC/portenpin1/: CMakeLists.txt
MIC_Project/MIC/portenpin1/src/: main.cpp  porstnpins2.cpp  portsnpins4.cpp
MIC_Project/MIC/project2/: CMakeLists.txt
MIC_Project/MIC/project2/src/: main.cpp
MIC_Project/MIC/project3/: CMakeLists.txt
MIC_Project/MIC/project3/src/: main.cpp  termin.cpp  tesfile.cpp
MIC_Project/MIC/xplexing/: CMakeLists.txt
MIC_Project/MIC/xplexing/src/: main.cpp
MIC_Project/Project/LCD/lib_install/SPIlib/src/bootloaders/atmega/: ATmegaBOOT_168_atmega328.hex
MIC_Project/Project/LCD/lib_install/Wirelib/: CMakeLists.txt
MIC_Project/Project/LCD/lib_install/Wirelib/src/: platform.txt
MIC_Project/Project/LCD/lib_install/Wirelib/src/bootloaders/atmega/: ATmegaBOOT_168_pro_8MHz.hex
MIC_Project/Project/Nun_LCD/: CMakeLists.txt
MIC_Project/Project/Nun_LCD/src/: main.cpp
MIC_Project/Project/nunchuck/install_lib/Wirelib/src/bootloaders/atmega/: ATmegaBOOT_168_atmega328_notp.hex  ATmegaBOOT_168_lilypad.hex
MIC_Project/Project/nunchuck/install_lib/Wirelib/src/bootloaders/optiboot/: optiboot_atmega168.hex
MIC_Project/Project/nunchuck/install_lib/Wirelib/src/bootloaders/stk500v2/: stk500boot_v2_mega2560.hex
Nun_LCD/: CMakeLists.txt
Nun_LCD/src/: graphicstest.cpp  main.cpp  object.cpp
Stopwatch/: CMakeLists.txt
Stopwatch/src/: stopwatch.cpp
Test_files/circles/src/: circle.cpp
Test_files/graphicstest/: CMakeLists.txt
complete/: CMakeLists.txt
complete/src/: object.cpp  test.cpp
lib_install/GFX/src/Adafruit-GFX-Library-1.11.3/: Adafruit_SPITFT.cpp
lib_install/SPIlib/: CMakeLists.txt
lib_install/SPIlib/src/bootloaders/atmega8/: ATmegaBOOT.hex
lib_install/SPIlib/src/bootloaders/bt/: ATmegaBOOT_168_atmega328_bt.hex
lib_install/SPIlib/src/bootloaders/stk500v2/: stk500boot_v2_mega2560.hex
lib_install/Wirelib/src/bootloaders/atmega/: ATmegaBOOT_168_pro_16MHz.hex
lib_install/Wirelib/src/bootloaders/atmega8/: Makefile
nunchuck/install_lib/Wirelib/src/bootloaders/atmega/: ATmegaBOOT_168_atmega1280.hex  ATmegaBOOT_168_atmega328_pro_8MHz.hex  ATmegaBOOT_168_pro_20mhz.hex
nunchuck/install_lib/Wirelib/src/bootloaders/atmega8/: ATmegaBOOT.hex
nunchuck/install_lib/Wirelib/src/bootloaders/bt/: ATmegaBOOT_168_atmega328_bt.hex
src/: test.cpp
